# apollo-lite

./: .bazelrc  .eslintrc.json  .gitignore  .pre-commit-config.yaml  MODULE.bazel  README.md  WORKSPACE  apollo.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: 01-bug_report.yml  02-feature_request.yml  03-question.yml  config.yml
.github/workflows/: lint-format.yml
cyber/: BUILD  init.cc  setup.bash
cyber/examples/: BUILD
cyber/logger/: async_logger.cc  async_logger.h  async_logger_test.cc  log_file_object.cc  log_file_object_test.cc  logger.cc  logger.h  logger_test.cc
cyber/message/: BUILD  protobuf_factory.cc  protobuf_factory.h
cyber/python/: BUILD
cyber/python/cyber_py3/: BUILD
cyber/python/internal/: BUILD  py_cyber.cc
cyber/tools/cyber_monitor/: BUILD  renderable_message.cc  screen.cc
docker/scripts/: dev_into.sh  dev_start.sh  docker_base.sh  install_resource.sh
docker/setup_host/: config_docker_mirror.sh  config_system.sh  install_docker.sh  install_nvidia_container_toolkit.sh  setup_host.sh
modules/canbus/proto/: BUILD
modules/common/: BUILD
modules/common/adapters/: BUILD  adapter_gflags.cc
modules/common/configs/: BUILD
modules/common/data/: global_flagfile.txt
modules/common/filters/: BUILD
modules/common/kv_db/: BUILD
modules/common/latency_recorder/: BUILD
modules/common/math/: BUILD  quaternion.h
modules/common/monitor_log/: BUILD
modules/common/status/: BUILD
modules/common/util/: BUILD  json_util.cc  map_util.h  message_util_test.cc  string_util.h  time_conversion.h  util_test.cc
modules/common/vehicle_model/: BUILD
modules/common/vehicle_state/: BUILD
modules/common_msgs/: BUILD
modules/common_msgs/audio_msgs/: BUILD
modules/common_msgs/basic_msgs/: BUILD
modules/common_msgs/chassis_msgs/: BUILD
modules/common_msgs/config_msgs/: BUILD
modules/common_msgs/control_msgs/: BUILD
modules/common_msgs/dreamview_msgs/: BUILD
modules/common_msgs/drivers_msgs/: BUILD
modules/common_msgs/guardian_msgs/: BUILD
modules/common_msgs/localization_msgs/: BUILD
modules/common_msgs/map_msgs/: BUILD
modules/common_msgs/monitor_msgs/: BUILD
modules/common_msgs/perception_msgs/: BUILD
modules/common_msgs/planning_msgs/: BUILD
modules/common_msgs/prediction_msgs/: BUILD
modules/common_msgs/routing_msgs/: BUILD  routing.proto
modules/common_msgs/sensor_msgs/: BUILD
modules/common_msgs/simulation_msgs/: BUILD
modules/common_msgs/storytelling_msgs/: BUILD
modules/common_msgs/task_manager_msgs/: BUILD
modules/common_msgs/transform_msgs/: BUILD
modules/common_msgs/v2x_msgs/: BUILD
modules/control/: BUILD
modules/control/common/: BUILD
modules/dreamview/: BUILD
modules/guardian/: BUILD
modules/localization/: BUILD
modules/perception/: BUILD
modules/planning/: BUILD  README.md  README_cn.md  navi_planning.cc  navi_planning.h  on_lane_planning.cc  planning_base.cc  planning_base.h
modules/prediction/: BUILD
modules/routing/: BUILD  routing_component.cc
modules/storytelling/: BUILD
modules/task_manager/: BUILD
modules/transform/: BUILD
scripts/: bootstrap.sh  buildifier.sh  common.bashrc  proto_build_generator.py  proto_build_generator.sh
scripts/ci/: apollo_build.sh  apollo_ci.sh  apollo_clean.sh  apollo_coverage.sh  apollo_docs.sh  apollo_lint.sh  apollo_release.sh  apollo_test.sh
tools/: bazel.rc  bootstrap.py  python_rules.bzl  workspace.bzl
(+563 files in other folders)
