module(
    name = "apollo",
    version = "8.0.0",
    compatibility_level = 1,
)

# bazel
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_pkg", version = "0.10.1")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "rules_python", version = "0.34.0")

# TODO: Keep the version of Python toolchain consistent with Docker.
# Note whether there is any duplication with .apollo.bazelrc?
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.8")
python.toolchain(python_version = "3.8")

# boost
bazel_dep(name = "boost.bind", version = "1.87.0")
bazel_dep(name = "boost.array", version = "1.87.0")
bazel_dep(name = "boost.filesystem", version = "1.87.0")
bazel_dep(name = "boost.range", version = "1.87.0")
bazel_dep(name = "boost.algorithm", version = "1.87.0")
bazel_dep(name = "boost.circular_buffer", version = "1.87.0")
bazel_dep(name = "boost.thread", version = "1.87.0")
bazel_dep(name = "boost.function", version = "1.87.0")
bazel_dep(name = "boost.container", version = "1.87.0")
bazel_dep(name = "boost.foreach", version = "1.87.0")
bazel_dep(name = "boost.lexical_cast", version = "1.87.0")
bazel_dep(name = "boost.math", version = "1.87.0")
bazel_dep(name = "boost.random", version = "1.87.0")
bazel_dep(name = "boost.format", version = "1.87.0")
bazel_dep(name = "boost.mpl", version = "1.87.0")
bazel_dep(name = "boost.property_tree", version = "1.87.0")
bazel_dep(name = "boost.program_options", version = "1.87.0")
bazel_dep(name = "boost.signals2", version = "1.87.0")
bazel_dep(name = "boost.tuple", version = "1.87.0")

# thirdparty
bazel_dep(name = "abseil-cpp", version = "20240116.2", repo_name = "com_google_absl")
bazel_dep(name = "cpplint", version = "2.0.2")
bazel_dep(name = "eigen", version = "4.0.0-20241125.bcr.2")
bazel_dep(name = "nlohmann_json", version = "3.12.0", repo_name = "com_github_nlohmann_json")
bazel_dep(name = "gflags", version = "2.2.2", repo_name = "com_github_gflags_gflags")
bazel_dep(name = "glog", version = "0.7.1", repo_name = "com_github_google_glog")
single_version_override(
    module_name = "glog",
    patch_strip = 1,
    patches = [
        "//third_party/glog:glog-0.7.1-gflags-coredump.patch",
    ],
    version = "0.7.1",
)

bazel_dep(name = "googletest", version = "1.17.0", repo_name = "com_google_googletest")
bazel_dep(name = "grpc", version = "1.69.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "protobuf", version = "29.0", repo_name = "com_google_protobuf")
bazel_dep(name = "zlib", version = "1.3.1.bcr.6")
bazel_dep(name = "ncurses", version = "6.4.20221231.bcr.8")
bazel_dep(name = "libuuid", version = "2.39.3.bcr.1", repo_name = "uuid")
bazel_dep(name = "tinyxml2", version = "10.0.0")
bazel_dep(name = "civetweb", version = "1.16.bcr.3")
bazel_dep(name = "sqlite3", version = "3.50.0")
bazel_dep(name = "fastcdr", version = "2.2.2")
bazel_dep(name = "fastdds", version = "2.14.3")
bazel_dep(name = "yaml-cpp", version = "0.8.0", repo_name = "com_github_jbeder_yaml_cpp")
bazel_dep(name = "portaudio", version = "19.7.0.bcr.3")
bazel_dep(name = "pcl", version = "1.15.0.bcr.2", repo_name = "local_config_pcl")
bazel_dep(name = "sse2neon", version = "1.8.0")
